# BACKEND/src/routes/index.js
@@ -3,12 +3,11 @@ const router = express.Router()
 
 const authRoutes = require('./authRoutes')
 const userRoutes = require('./userRoutes')
-const plansRoutes = require('./plans.routes')
 const userPlanSubsRoutes = require('./userPlanSubs.routes')
 
+// Rotas principais
 router.use('/auth', authRoutes)
-router.use('/plans', plansRoutes)
-router.use('/user', userRoutes)
-router.use('/plans', userPlanSubsRoutes)
+router.use('/users', userRoutes)
+router.use('/subscriptions', userPlanSubsRoutes)
 
 module.exports = router
